<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/degrade"
    >

    <View
        android:id="@+id/gradiente_cinza"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_centerInParent="true"
        android:background="@drawable/degade_cinza"
        android:padding="4dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/app_name"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/white"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:id="@+id/ConsumoT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/ConsumoT"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="18sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gradiente_cinza"
        android:layout_marginTop="30sp"
        android:layout_marginEnd="200dp"
        />

    <EditText
        android:id="@id/ConsumoT_Resultado"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"

        android:textSize="15sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textAlignment="center"


        android:layout_marginEnd="10dp"
        android:layout_marginTop="55dp"
        app:layout_constraintTop_toTopOf="@+id/gradiente_cinza"
        app:layout_constraintStart_toEndOf="@+id/ConsumoT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/ConsumoT"
        />


    <TextView
        android:id="@+id/Couvert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/Couvert"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="18sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ConsumoT"
        android:layout_marginTop="30sp"
        android:layout_marginEnd="200dp"
        />

    <EditText
        android:id="@+id/Couvert_Resultado"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        android:textSize="15sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textAlignment="center"


        android:layout_marginEnd="10dp"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="@+id/Couvert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toEndOf="@+id/Couvert"
        app:layout_constraintTop_toBottomOf="@+id/ConsumoT_Resultado"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/Dividir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_marginEnd="205sp"
        android:layout_marginTop="20dp"
        android:text="@string/Dividir"
        android:textAllCaps="true"

        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Couvert"

        />

    <EditText
        android:id="@+id/Dividir_Resultado"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"

        android:textSize="15sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textAlignment="center"

        android:layout_marginEnd="4dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/Couvert_Resultado"
        app:layout_constraintStart_toEndOf="@+id/Dividir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/Dividir"
        />

    <androidx.constraintlayout.utils.widget.MotionButton
        android:id="@+id/ButtonCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/ButtonCalcular"
        android:textSize="18sp"
        android:textStyle="bold"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Dividir"
        android:layout_margin="20sp"

        />


    <TextView
        android:id="@+id/TaxaServiço"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_margin="20sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:text="@string/TaxaServiço"

        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ButtonCalcular" />

    <EditText
        android:id="@+id/TaxaServiço_Saida"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"

        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="15sp"
        android:layout_marginLeft="20dp"

        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/TaxaServiço"
        app:layout_constraintTop_toBottomOf="@+id/ButtonCalcular" />


    <TextView
        android:id="@+id/ContaTotal"
        android:layout_width="120sp"
        android:layout_height="wrap_content"

        android:layout_margin="20sp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="100sp"
        android:text="@string/ContaT"
        android:textAllCaps="true"

        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TaxaServiço" />


    <TextView
        android:id="@+id/ValorPorPessoa"
        android:layout_width="180sp"
        android:layout_height="wrap_content"

        android:layout_margin="20sp"
        android:layout_marginTop="36dp"
        android:text="@string/ValorPorPessoa"
        android:textAllCaps="true"

        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ContaTotal" />

    <EditText
        android:id="@+id/ContaTotal_Saida"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"


        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="15sp"

        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.989"
        app:layout_constraintStart_toEndOf="@+id/ContaTotal"
        app:layout_constraintTop_toBottomOf="@+id/TaxaServiço_Saida" />

    <EditText
        android:id="@+id/contaTotal_Saida"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"

        android:layout_marginTop="40dp"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="15sp"

        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/ContaTotal"
        app:layout_constraintTop_toBottomOf="@+id/TaxaServiço_Saida" />

    <ImageView
        android:layout_width="450dp"
        android:layout_height="350dp"

        android:src="@mipmap/ic_launcher_foreground"


        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="500dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>